--- a/src/app/modules/homes/theme.css
+++ b/src/app/modules/homes/theme.css
@@ -1,6 +1,7 @@
 :root {
-    --nesthomes-primary: 358 83% 54%; /* DigitalNest Red */
-    --nesthomes-accent: 141 53% 43%; /* Green */
+    --nesthomes-primary: 209 75% 40%; /* DigitalNest Blue */
+    --nesthomes-accent: 358 83% 54%; /* DigitalNest Red */
+    --nesthomes-positive: 141 53% 43%; /* Green */
 }
 .nesthomes-theme {
     --background: 240 10% 98%;
