--- a/src/app/modules/homes/theme.css
+++ b/src/app/modules/homes/theme.css
@@ -1,6 +1,6 @@
 :root {
-    --nesthomes-primary: 209 75% 40%; /* DigitalNest Blue - #1767b0 */
-    --nesthomes-accent: 358 83% 54%; /* DigitalNest Red - #ea262c */
+    --nesthomes-primary: 358 83% 54%; /* DigitalNest Red - #ea262c */
+    --nesthomes-accent: 1767b0; /* DigitalNest Blue - #1767b0 */
 }
 .nesthomes-theme {
     --background: 240 10% 98%;
@@ -53,4 +53,3 @@
     min-height: 700px;
     height: 70vh;
   }
-
