--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,7 +16,7 @@
     --secondary-foreground: 0 0% 100%;
     --muted: 210 40% 96.1%;
     --muted-foreground: 240 5% 45.1%;
-    --accent: 358 83% 54%; /* DigitalNest Red - #ea262c */
+    --accent: 21 100% 63%; /* DigitalNest Orange - #ff8040 */
     --accent-foreground: 0 0% 100%;
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
@@ -52,7 +52,7 @@
     --secondary-foreground: 0 0% 98%;
     --muted: 240 5% 14.9%;
     --muted-foreground: 240 5% 63.9%;
-    --accent: 358 83% 54%;
+    --accent: 21 100% 63%;
     --accent-foreground: 0 0% 100%;
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
