--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -80,12 +80,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground font-body;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    @apply font-headline;
-  }
-  a {
-    @apply font-medium text-accent hover:text-accent/80;
+    @apply bg-background text-foreground;
   }
 }
